0031512: Foundation Classes - drop unused class NCollection_Comparator